--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Music App</a>
+          <a class="navbar-brand" href="index.html">Music App</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li>
+              <form id="topform" class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                  <input id="topforminput" type="text" class="form-control" placeholder="Search">
+                </div>
+                <button id="submitbtn" type="submit" class="btn btn-default">Submit</button>
+              </form>
+            </li>
             <li class=""><a href="#">Track</a></li>
-            <li><a href="#">Artist</a></li>
+            <li><a href="index.html">Chart Top</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -45,7 +53,7 @@
     <div class="container">
       <form id="searchform">
         <div class="form-group">
-          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name">
+          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name" autofocus>
         </div>
         <button type="submit" id="submitbtn" class="btn btn-default">Submit</button>
       </form>
@@ -54,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="waitinginfo">
-          
+
 
         </div>
         <div class="fullinfo">
