--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Music App</a>
+          <a class="navbar-brand" href="index.html">TRACKr</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
                 <button id="submitbtn" type="submit" class="btn btn-default">Submit</button>
               </form>
             </li>
-            <li class=""><a href="#">Track</a></li>
+            <!-- <li class=""><a href="#">Track</a></li> -->
             <li><a href="index.html">Chart Top</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-
+    <a href="#0" class="cd-top">Top</a>
     <!-- jQuery (necessary for Flat UI's JavaScript plugins) -->
     <script src="js/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
