--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>| MusicApp</title>
+    <title>| TRACKr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
   <body>
 
 <!-- NAVBAR START -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top animated slideInDown">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -51,16 +51,51 @@
 <!-- NAVBAR START -->
 
     <div class="container">
-      <form id="searchform">
+      <form id="searchform ">
         <div class="form-group">
-          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name" autofocus>
+          <input type="text"  class="mybox"id="trackinput" placeholder="Track Name" autofocus>
         </div>
         <button type="submit" id="submitbtn" class="btn btn-default">Submit</button>
       </form>
     </div>
     <br><br>
     <div class="container">
-      <div class="row">
+      <!-- Button trigger modal -->
+
+
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Album Info</h4>
+            </div>
+            <div class="modal-body">
+              <h4></h4>
+              <table class="table">
+                  <tbody>
+                    <tr>
+                      <td>Artist</td>
+                      <td></td>
+                      <td></td>
+
+                      <td>Charlie Puth</td>
+                    </tr>
+                    <tr>
+                      <td>Lyrics</td>
+                      <td></td>
+                      <td></td>
+                      <td><a href="https://www.musixmatch.com/lyrics/Wiz-Khalifa-feat-Charlie-Puth/See-You-Again">Click Here</a></td>
+                    </tr>
+
+                  </tbody>
+                </table>
+            </div>
+
+          </div>
+        </div>
+      </div>
         <div class="waitinginfo">
 
 
