--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>| TRACKr</title>
+    <title>| MusicApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
   <body>
 
 <!-- NAVBAR START -->
-    <nav class="navbar navbar-inverse navbar-fixed-top animated slideInDown">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -26,23 +26,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">TRACKr</a>
+          <a class="navbar-brand" href="#">Music App</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <form id="topform" class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                  <input id="topforminput" type="text" class="form-control" placeholder="Search">
-                </div>
-                <button id="submitbtn" type="submit" class="btn btn-default">Submit</button>
-              </form>
-            </li>
-            <!-- <li class=""><a href="#">Track</a></li> -->
-            <li><a href="index.html">Chart Top</a></li>
+            <li class=""><a href="#">Track</a></li>
+            <li><a href="#">Artist</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -51,53 +43,18 @@
 <!-- NAVBAR START -->
 
     <div class="container">
-      <form id="searchform ">
+      <form id="searchform">
         <div class="form-group">
-          <input type="text"  class="mybox"id="trackinput" placeholder="Track Name" autofocus>
+          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name">
         </div>
         <button type="submit" id="submitbtn" class="btn btn-default">Submit</button>
       </form>
     </div>
     <br><br>
     <div class="container">
-      <!-- Button trigger modal -->
-
-
-      <!-- Modal -->
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">Album Info</h4>
-            </div>
-            <div class="modal-body">
-              <h4></h4>
-              <table class="table">
-                  <tbody>
-                    <tr>
-                      <td>Artist</td>
-                      <td></td>
-                      <td></td>
-
-                      <td>Charlie Puth</td>
-                    </tr>
-                    <tr>
-                      <td>Lyrics</td>
-                      <td></td>
-                      <td></td>
-                      <td><a href="https://www.musixmatch.com/lyrics/Wiz-Khalifa-feat-Charlie-Puth/See-You-Again">Click Here</a></td>
-                    </tr>
-
-                  </tbody>
-                </table>
-            </div>
-
-          </div>
-        </div>
-      </div>
+      <div class="row">
         <div class="waitinginfo">
-
+          
 
         </div>
         <div class="fullinfo">
@@ -105,7 +62,7 @@
         </div>
       </div>
     </div>
-    <a href="#0" class="cd-top">Top</a>
+
     <!-- jQuery (necessary for Flat UI's JavaScript plugins) -->
     <script src="js/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
