--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>| MusicApp</title>
+    <title>| TRACKr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
   <body>
 
 <!-- NAVBAR START -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top animated slideInDown">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -26,15 +26,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Music App</a>
+          <a class="navbar-brand" href="index.html">TRACKr</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class=""><a href="#">Track</a></li>
-            <li><a href="#">Artist</a></li>
+            <li>
+              <form id="topform" class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                  <input id="topforminput" type="text" class="form-control" placeholder="Search">
+                </div>
+                <button id="submitbtn" type="submit" class="btn btn-default">Submit</button>
+              </form>
+            </li>
+            <!-- <li class=""><a href="#">Track</a></li> -->
+            <li><a href="index.html">Chart Top</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -45,7 +53,7 @@
     <div class="container">
       <form id="searchform">
         <div class="form-group">
-          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name">
+          <input type="text"  class="mybox "id="trackinput" placeholder="Track Name" autofocus>
         </div>
         <button type="submit" id="submitbtn" class="btn btn-default">Submit</button>
       </form>
@@ -54,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="waitinginfo">
-          
+
 
         </div>
         <div class="fullinfo">
@@ -62,7 +70,7 @@
         </div>
       </div>
     </div>
-
+    <a href="#0" class="cd-top">Top</a>
     <!-- jQuery (necessary for Flat UI's JavaScript plugins) -->
     <script src="js/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
